# childdebugger-vscode

./: .editorconfig  .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  ci.yml  cpp-format.yml  cpp-lint.yml  deploy-head.yml  package.yml  publish.yml
cmake/modules/: FindVSDebugConfigTool.cmake
src/: ChildDebugger.def  ChildDebugger.vsdconfigxml  ChildDebuggerService.cpp  ChildDebuggerService.h  dllmain.cpp  extension.ts  integration.ts  ntsuspend.cpp  ntsuspend.h  uninstall.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts
tests/callee/: main.cpp
tests/caller/: main.cpp
vsdbg-engine-extension/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
vsdbg-engine-extension/.github/workflows/: ci.yml
vsdbg-engine-extension/cmake/modules/: FindNETFXSDK.cmake  FindVSDebugEng.cmake
vsdbg-engine-extension/src/: ChildDebuggerService.cpp  ChildDebuggerService.h  ChildDebuggerService.hpp  CreateFunctionFrames.hpp  CreateFunctionType.hpp  CustomMessageType.hpp  DataItems.hpp  FunctionCallContext.hpp  Logger.hpp  SystemUtils.hpp  UnicodeUtils.hpp  dllmain.cpp  dllmain.h
vsdbg-engine-extension/tests/: CMakeLists.txt
vsdbg-engine-extension/tests/callee/: main.cpp
vsdbg-engine-extension/tests/caller/: main.cpp
